added first courses db with mock entries, modify endpoint routes, update api specs
