# openapi.json
@@ -15,6 +15,10 @@
         "description": "Operations related to courses"
     },
     {
+      "name": "Course",
+      "description": "Get individual course"
+    },
+    {
         "name": "Students",
         "description": "Operations related to students"
     },
@@ -28,17 +32,26 @@
       "Course": {
         "type": "object",
         "properties": {
-          "course_code": {
-            "type": "integer"
+          "course_id": {
+            "type": "string"
           },
-          "name": {
+          "title": {
             "type": "string"
           },
           "description": {
             "type": "string"
+          }, 
+          "start_date": {
+            "type":"string"
+          },
+          "end_date":{
+            "type":"string"
+          },
+          "class_capacity":{
+            "type":"integer"
           }
         },
-        "required": ["course_code", "name"]
+        "required": ["course_id", "title"]
       },
       "Student": {
         "type": "object",
@@ -67,7 +80,7 @@
     }
   },
   "paths": {
-    "/api/courses": {
+    "/api/v1/courses": {
       "get": {
         "description": "Retrieve all courses",
         "parameters": [],
@@ -101,7 +114,7 @@
         }
       }
     },
-    "/api/students": {
+    "/api/v1/students": {
       "get": {
         "description": "Retrieve all students",
         "parameters": [],
@@ -129,7 +142,7 @@
         }
       }
     },
-    "/api/instructors": {
+    "/api/v1/instructors": {
       "get": {
         "description": "Retrieve all instructors",
         "parameters": [],
@@ -153,6 +166,27 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/api/v1/courses/{course_id}": {
+      "get": {
+        "operationId": "getOneCourse",
+        "tags": ["Course"],
+        "description": "Retrieve individual course by its Course ID",
+        "parameters": [{
+            "name": "course_id",
+            "in": "path",
+            "description": "ID of course to return",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
